Fix some conflicting z-index's, fix #61 (hopefully).

--- a/style.css
+++ b/style.css
@@ -2012,7 +2012,7 @@ body>center:nth-of-type(2)
 	" + $SS.conf["Sidebar Position String"] + ":" + $SS.iSidebarSize + "px!important;
     top:" + ($SS.conf["Navigation Bar Position"] === 1 ? 19 : 0) + "px;
 	white-space:nowrap;
-	z-index:12;
+	z-index:11;
 	" + ($SS.conf["Layout"] !== 1 ? "border-radius:" + ($SS.conf["Sidebar Position"] !== 2 ? "0 0 0 3px " : "0 0 3px 0") : "") + ";
 	-webkit-transition:all .2s ease-in-out;
 	-moz-transition:all .2s ease-in-out;
@@ -2043,11 +2043,12 @@ body>.closed
 {
     " + ($SS.conf["Sidebar Position"] !== 2 ? "margin-left:-" + $SS.iSidebarSize + "px!important;" : "") + "
     height:18px;
-    line-height:18px;
-    top:0!important;
 	left:0!important;
+    line-height:18px;
+    overflow-y:hidden;
 	position:fixed!important;
 	text-align:center;
+    top:0!important;
 	width:100%!important;
 	z-index:12!important;
 }
